# ballistica_web

./: .gitignore  BallisticaKit.js  IOS_PORT.md  index.html
ballisticakit-cmake/: CMakeLists.txt
ballisticakit-ios/: CMakeLists.txt  CMakeLists_demo.txt  CMakeLists_full.txt  Info.plist
ballisticakit-ios/ode_stubs/ballistica/shared/: ballistica.h
ballisticakit-ios/src/: AppDelegate.h  AppDelegate.mm  BallisticaKit-Swift.h  DemoScene.cc  DemoScene.h  GameViewController.h  GameViewController.mm  PhysicsTest.cc  PhysicsTest.h  Renderer.cc  Renderer.h  baplus_stub.cc  buildconfig_ios.h  buildconfig_ios_demo.h  engine_shims.cc  engine_shims.h  ios_main.mm  ios_stubs.cc
ballisticakit-ios/src/ballistica/base/app_platform/apple/: from_swift.h
ballisticakit-ios/vorbis_stubs/: ivorbisfile.h
ballisticakit-ios/vorbis_stubs/vorbis/: vorbisfile.h
ballisticakit-web/: CMakeLists.txt  ws_proxy.py
ballisticakit-web/src/: app_adapter_web.cc  app_adapter_web.h  baplus_stub.cc  buildconfig_web.h  web_main.cc  web_stubs.cc
ballisticakit-windows/Generic/: BallisticaKitGeneric.vcxproj
ballisticakit-windows/Headless/: BallisticaKitHeadless.vcxproj  BallisticaKitHeadless.vcxproj.filters
gamepad/: index.html
src/assets/ba_data/python/: baenv.py
src/assets/ba_data/python/babase/: _app.py  _apputils.py  _asyncio.py  _env.py  _meta.py  _net.py
src/assets/ba_data/python/bascenev1/: _activitytypes.py  _profile.py
src/assets/ba_data/python/bauiv1lib/: gamepadqr.py  ingamemenu.py  mainmenu.py
src/assets/ba_data/python/bauiv1lib/gather/: _gather.py  invitelinktab.py
src/assets/ba_data/python/bauiv1lib/settings/: advanced.py
src/ballistica/base/: base.cc
src/ballistica/base/app_adapter/: app_adapter_apple.cc
src/ballistica/base/app_platform/: app_platform.cc
src/ballistica/base/assets/: assets.cc
src/ballistica/base/audio/: audio_server.cc
src/ballistica/base/graphics/: graphics.cc  graphics_server.cc
src/ballistica/base/graphics/gl/: framebuffer_object_gl.h  gl_sys.h  renderer_gl.cc
src/ballistica/base/graphics/renderer/: render_target.cc  renderer.cc
src/ballistica/base/logic/: logic.cc
src/ballistica/base/networking/: network_reader.cc  network_writer.cc  networking.cc
src/ballistica/base/support/: base_build_switches.cc
src/ballistica/core/platform/: platform.cc
src/ballistica/core/platform/web/: platform_web.cc  platform_web.h
src/ballistica/scene_v1/connection/: connection_to_client.cc
src/ballistica/shared/: ballistica.cc
src/ballistica/shared/buildconfig/: buildconfig_common.h
src/ballistica/shared/foundation/: event_loop.cc
src/ballistica/shared/python/: python.cc
src/meta/bacoremeta/pyembed/: env.py
tools/bacommon/: app.py
tools/efro/: logging.py
